grammars/tree-sitter-bsol/test/corpus/blocks.txt
==================
Simple block
==================

demo {
  name = "demo"
}

---

(source_file
  (block
    (block_kind
      (identifier))
    (assignment
      (identifier)
      (value
        (string)))))
